updating images and fixing overflow

--- a/src/input.css
+++ b/src/input.css
@@ -15,3 +15,9 @@
     }
 }
 
+#connect {
+    max-width: 100%
+}
+
+
+
